tests/testdata/bench/no_run.out
Check [WILDCARD]/bench/no_run.ts
TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const _value: string = 1;
      ~~~~~~
    at [WILDCARD]/bench/no_run.ts:1:7

error: Type checking failed.
